# no-hitter-analysis

./: .gitignore  2017BAL.txt  README.md  bids.csv  bids.txt  classes.py  createdatasets.py  environment.yml  nhaclasses.py  nhafunctions.py  nhastatistics.py  nohitteranalysis.py  pyproject.toml
Data/: 2000ANA.EVA  2000CHA.EVA  2000SFN.EVN  2001ARI.EVN  2001BAL.EVA  2001MIN.EVA  2001SEA.EVA  2002MIN.EVA  2002TEX.EVA  2003BOS.EVA  2003CHA.EVA  2003CHN.EVN  2004DET.EVA  2005ARI.EVN  2005ATL.EVN  2005BOS.EVA  2005CHA.EVA  2005COL.EVN  2005KCA.EVA  2005LAN.EVN  2005NYN.EVN  2005OAK.EVA  2005SEA.EVA  2005TOR.EVA  2006ANA.EVA  2006ATL.EVN  2006CHA.EVA  2006CLE.EVA  2006HOU.EVN  2006KCA.EVA  2006LAN.EVN  2006MIN.EVA  2006SEA.EVA  2006SFN.EVN  2006TBA.EVA  2007ANA.EVA  2007BAL.EVA  2007BOS.EVA  2007CLE.EVA  2007FLO.EVN  (+24 more)
Historical_Probability/: .gitignore  README.md  bids.csv  createdatasets.py  nohitteranalysis.py
Historical_Probability/Data/: 2000NYA.EVA  2000SDN.EVN  2000TOR.EVA  2001ANA.EVA  2001CIN.EVN  2001MIL.EVN  2001SDN.EVN  2002ANA.EVA  2002BOS.EVA  2002CIN.EVN  2002DET.EVA  2003ANA.EVA  2003COL.EVN  2003NYA.EVA  2003PHI.EVN  2004NYA.EVA  2005CHN.EVN  2005CIN.EVN  2005DET.EVA  2005FLO.EVN  2005MIL.EVN  2005MIN.EVA  2005NYA.EVA  2005SLN.EVN  2005TBA.EVA  2006ARI.EVN  2006CHN.EVN  2006CIN.EVN  2006COL.EVN  2006DET.EVA  2006NYA.EVA  2006NYN.EVN  2006OAK.EVA  2006TEX.EVA  (+38 more)
xBA_Likeliness/: .Rprofile  .gitignore  CalculateNoHitterLikeliness.R  GetNoHitterData.R  LikelinessAnalysis.R  NoHitterDataCollection.R  NoHitterLikelinessScript.R  credits.txt  nohitterlist.csv
(+1 files in other folders)
