[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt", email = "mattbbernstein@gmail.com"},
]
dependencies = [
    "scipy>=1.6.1",
    "numpy>=1.23.3",
    "matplotlib>=3.6.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
